--- a/vue-4-beginners/app/looping_thru_objects/index.html
+++ b/vue-4-beginners/app/looping_thru_objects/index.html
@@ -6,12 +6,15 @@
         <title>vue-practice</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="https://unpkg.com/vue@next"></script>
+        <script src="https://unpkg.com/lodash@4.17.20/lodash.min.js"></script>
     </head>
     <body>
-        <h1> Using Vue Methods </h1>
-        <div id="app">
-            {{sampleStr}}
-        </div>
+        <h1>Looping through Object</h1>
+        <ol id="app">
+            <li v-for="(item, index) in items">
+                
+            </li>
+        </ol>
         <script src="script.js"></script>
     </body>
 </html>
