--- a/vue-4-beginners/app/ranged_loops/index.html
+++ b/vue-4-beginners/app/ranged_loops/index.html
@@ -6,11 +6,15 @@
         <title>vue-practice</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="https://unpkg.com/vue@next"></script>
+        <script src="https://unpkg.com/lodash@4.17.20/lodash.min.js"></script>
     </head>
     <body>
-        <h1> Using Vue Methods </h1>
+        <h1>Ranged Loops</h1>
         <div id="app">
-            {{sampleStr}}
+            <span v-for="number in 25">
+                {{ number }}
+                <br>
+            </span>
         </div>
         <script src="script.js"></script>
     </body>
