--- a/vue-4-beginners/app/using_lodash/index.html
+++ b/vue-4-beginners/app/using_lodash/index.html
@@ -6,11 +6,11 @@
         <title>vue-practice</title>
         <link href="style.css" rel="stylesheet" type="text/css"/>
         <script src="https://unpkg.com/vue@next"></script>
+        <script src="https://unpkg.com/lodash@4.17.20/lodash.min.js"></script>
     </head>
     <body>
-        <h1> Using Vue Methods </h1>
+        <h1> Data Props with Lodash </h1>
         <div id="app">
-            {{sampleStr}}
         </div>
         <script src="script.js"></script>
     </body>
